--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "@typescript-eslint/no-unused-vars": "off", // Ignora variáveis não utilizadas
     "@typescript-eslint/no-explicit-any": "off", // Permite uso de 'any'
     "@typescript-eslint/no-empty-interface": "off", // Ignora interfaces vazias
-    "@typescript-eslint/no-floating-promises": "off" // Ignora promessas não aguardadas
+    "@typescript-eslint/no-floating-promises": "off", // Ignora promessas não aguardadas
+    "@typescript-eslint/no-wrapper-object-types": "off"
   }
 }
