--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
@@ -16,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "0.0.31",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,8 +30,8 @@
     "next": "14.2.13",
     "next-cloudinary": "^5.20.0",
     "prettier": "^3.3.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.14.1",
@@ -45,6 +47,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "react-email": "3.0.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
